Fixed post spacing between <hr>'s and fixed post title CSS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ h1 {
 }
 
 .post-title {
-    margin-bottom: 0;
+    margin: 0 auto;
 }
 
 .post-link {
